[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Wagon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/fonts/kongtext/kongtext.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/word_bubble_left_character.png" type="Texture" id=5]
[ext_resource path="res://Assets/word_bubble_right_character.png" type="Texture" id=6]
[ext_resource path="res://Assets/lummins/lummins_3.png" type="Texture" id=7]
[ext_resource path="res://Assets/lummins/lummins_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/lummins/lummins_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/lummins/lummins_4.png" type="Texture" id=10]
[ext_resource path="res://Assets/oodleboop/oodleboop_8.png" type="Texture" id=11]
[ext_resource path="res://Assets/oodleboop/oodleboop_6.png" type="Texture" id=12]
[ext_resource path="res://Assets/oodleboop/oodleboop_4.png" type="Texture" id=13]
[ext_resource path="res://Assets/oodleboop/oodleboop_2.png" type="Texture" id=14]
[ext_resource path="res://Assets/oodleboop/oodleboop_7.png" type="Texture" id=15]
[ext_resource path="res://Assets/oodleboop/oodleboop_1.png" type="Texture" id=16]
[ext_resource path="res://Assets/oodleboop/oodleboop_5.png" type="Texture" id=17]
[ext_resource path="res://Assets/oodleboop/oodleboop_3.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/DeepgramIntegration/DeepgramInstance.tscn" type="PackedScene" id=21]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 23 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15, 29 )

[node name="Game" type="Node"]
script = ExtResource( 19 )

[node name="Ground" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 60 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Wagon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -60 )

[node name="LeftBubble" type="Sprite" parent="."]
position = Vector2( -184, -180 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="LumminsSpeech" type="Label" parent="."]
margin_left = -308.0
margin_top = -230.0
margin_right = -58.0
margin_bottom = -177.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Step right up to get your tush whooped!"
autowrap = true
max_lines_visible = 5

[node name="RightBubble" type="Sprite" parent="."]
position = Vector2( 184, -180 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="OodleboopSpeech" type="Label" parent="."]
margin_left = 60.0
margin_top = -230.0
margin_right = 310.0
margin_bottom = -177.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Solve the riddles to score points. I'll give you hints, I'm wishing you the best of luck!"
autowrap = true
max_lines_visible = 5

[node name="Lummins" type="StaticBody2D" parent="."]
position = Vector2( -230, -76 )
scale = Vector2( 2, 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Lummins"]
frames = SubResource( 3 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lummins"]
shape = SubResource( 4 )

[node name="Oodleboop" type="StaticBody2D" parent="."]
position = Vector2( 230, -64 )
scale = Vector2( 2, 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Oodleboop"]
frames = SubResource( 5 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Oodleboop"]
shape = SubResource( 6 )

[node name="LumminsSpeechTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Button" parent="." instance=ExtResource( 20 )]
position = Vector2( 0, 120 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -120, 120 )

[node name="SloomSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AttackPhaseTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DeepgramInstance" parent="." instance=ExtResource( 21 )]

[connection signal="timeout" from="LumminsSpeechTimer" to="." method="_on_LumminsSpeechTimer_timeout"]
[connection signal="area_entered" from="Button" to="." method="_on_Button_area_entered"]
[connection signal="area_exited" from="Button" to="." method="_on_Button_area_exited"]
[connection signal="timeout" from="SloomSpawnTimer" to="." method="_on_SloomSpawnTimer_timeout"]
[connection signal="timeout" from="AttackPhaseTimer" to="." method="_on_AttackPhaseTimer_timeout"]
[connection signal="message_received" from="DeepgramInstance" to="." method="_on_DeepgramInstance_message_received"]
